--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "hexo": {
     "version": "3.5.0"
   },
+  "scripts": {
+    "start":"npm run build && hexo serve",
+    "build":"rimraf public && hexo generate"
+  },
   "dependencies": {
     "hexo": "^3.2.0",
     "hexo-deployer-ftpsync": "^0.1.1",
@@ -17,5 +21,8 @@
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0"
+  },
+  "devDependencies": {
+    "rimraf": "^2.6.2"
   }
 }
